[gd_scene load_steps=2 format=3 uid="uid://chat_panel_scene"]

[ext_resource type="Script" path="res://scripts/ui/chat_panel.gd" id="1"]

[node name="ChatPanel" type="Panel"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HeaderPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "ðŸ’¬ Chat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputPanel/MarginContainer"]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="VBoxContainer/InputPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Escribe un mensaje..."
max_length = 200

[node name="SendButton" type="Button" parent="VBoxContainer/InputPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Enviar"
